--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
     <script src="javascript.js"></script>
 </head>
 <body>
 
+<div class="top-bar">
+    <h1 class="title">Rock Paper Scissors</h1>
+</div>    
+<div class="content-container">
+    <p class="round-title">Take your pick!</p>
+<div class="button-container">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+</div>
+<div class="scoreboard-container">
+    <p class="scoreboard">Scoreboard</p>
+    <div class="score-tracking">
+    <p class="user-score">Your score:</p>
+    <p class="computer-score">Computer score:</p>
+    </div>
+</div>
+</div>
 </body>
 </html>
