--- a/index.html
+++ b/index.html
@@ -5,27 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
-    <script src="javascript.js"></script>
+    <script src="javascript.js" defer></script>
 </head>
 <body>
-
-<div class="top-bar">
+<div class="header">
     <h1 class="title">Rock Paper Scissors</h1>
-</div>    
-<div class="content-container">
-    <p class="round-title">Take your pick!</p>
-<div class="button-container">
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
 </div>
-<div class="scoreboard-container">
-    <p class="scoreboard">Scoreboard</p>
-    <div class="score-tracking">
-    <p class="user-score">Your score:</p>
-    <p class="computer-score">Computer score:</p>
+<div class="main"> 
+    <section>
+        <h2 class="round-title">Shoot:</h2>
+    <div class="button-container">
+        <button class="rock">🪨 Rock</button>
+        <button class="paper">📄 Paper</button>
+        <button class="scissors">✂️ Scissors</button>
     </div>
+    </section>
+    <section>
+    <div class="scoreboard-container">
+        <h3 class="scoreboard">Results</h3>
+        <div class="score-tracking">
+        <p class="user-score">Your score: 0</p>
+        <p class="computer-score">Computer score: 0</p>
+        </div>
+    </div>
+    </section>
 </div>
-</div>
+<div class="footer"><p>&copy; 2025 <a href="https://github.com/jsonsDev">jsonsDev</a></p></div>
 </body>
 </html>
