Rename scoreboard header.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     <section>
     <div class="scoreboard-container">
-        <h3 class="scoreboard">Results</h3>
+        <h3 class="scoreboard-header">Results</h3>
         <div class="score-tracking">
         <p class="user-score">Your score: 0</p>
         <p class="computer-score">Computer score: 0</p>
