Change .user-score to .human-score.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="scoreboard-container">
         <h3 class="scoreboard-header">Results</h3>
         <div class="score-tracking">
-        <p class="user-score">Your score: 0</p>
+        <p class="human-score">Your score: 0</p>
         <p class="computer-score">Computer score: 0</p>
         </div>
     </div>
