Add section to display round choices.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,20 @@
     </div>
     </section>
     <section>
+        <div class="round-choices">
+        <div class="human-choice">
+            <p class="human-display">🙂</p>
+        </div>
+        <h3>VS</h3>
+        <div class="computer-choice">
+            <p class="computer-display">🤖</p>
+        </div>
+    </div>
+    </section>
+    <section>
     <div class="scoreboard-container">
         <h3 class="scoreboard-header">Results</h3>
-        <div class="score-tracking">
+        <div class="score-display">
         <p class="human-score">Your score: 0</p>
         <p class="computer-score">Computer score: 0</p>
         </div>
